--- a/package.json
+++ b/package.json
@@ -1,1 +1,18 @@
-
+{
+  "name": "todoapp",
+  "version": "0.1.0",
+  "description": "menubar todo app",
+  "main": "index.js",
+  "scripts": {
+    "build": "electron-builder",
+    "start": "electron ."
+  },
+  "devDependencies": {
+    "electron": "^5.0.1",
+    "electron-builder": "^20.39.0",
+    "electron-prebuilt": "^1.4.13"
+  },
+  "dependencies": {
+    "menubar": "^6.0.1"
+  }
+}
