--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "devDependencies": {
     "electron": "^5.0.1",
     "electron-builder": "^20.39.0",
-    "electron-prebuilt": "^1.4.13"
+    "electron-prebuilt": "^1.4.13",
+    "nanologger": "^1.3.1"
   },
   "dependencies": {
-    "menubar": "^6.0.1"
+    "menubar": "^6.0.3",
+    "nanobus": "^4.4.0",
+    "nanohtml": "^1.6.3",
+    "nanomorph": "^5.4.0"
   }
 }
