--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nanologger": "^1.3.1"
   },
   "dependencies": {
+    "dragula": "^3.7.2",
     "menubar": "^6.0.3",
     "nanobus": "^4.4.0",
     "nanohtml": "^1.6.3",
