--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "devDependencies": {
     "electron": "^5.0.1",
     "electron-builder": "^20.39.0",
-    "electron-prebuilt": "^1.4.13",
-    "nanologger": "^1.3.1"
+    "electron-prebuilt": "^1.4.13"
   },
   "dependencies": {
     "dragula": "^3.7.2",
+    "electron-is-dev": "^1.1.0",
     "menubar": "^6.0.3",
     "nanobus": "^4.4.0",
     "nanohtml": "^1.6.3",
+    "nanologger": "^1.3.1",
     "nanomorph": "^5.4.0"
   }
 }
