--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Yerko Palma <yerko.palma@usach.cl>",
   "scripts": {
     "build": "electron-builder",
-    "start": "electron ."
+    "test": "standard *.ts",
+    "start": "electron ./src/main"
   },
   "build": {
     "appId": "com.yerkopalma.Todoapp",
@@ -35,10 +36,17 @@
       ]
     }
   },
+  "standard": {
+    "parser": "@typescript-eslint/parser",
+    "plugins": [ "@typescript-eslint/eslint-plugin" ]
+  },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
     "electron": "^5.0.4",
     "electron-builder": "^20.39.0",
-    "electron-reload": "^1.4.0"
+    "electron-reload": "^1.4.0",
+    "standard": "^12.0.1"
   },
   "dependencies": {
     "dragula": "^3.7.2",
