--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "todoapp",
   "version": "1.2.0",
   "description": "menubar todo app",
-  "main": "index.js",
+  "main": "src/main/index.js",
   "author": "Yerko Palma <yerko.palma@usach.cl>",
   "scripts": {
-    "build": "electron-builder",
+    "build": "tsc",
+    "pack": "electron-builder",
     "test": "standard *.ts",
-    "start": "electron ./src/main"
+    "start": "npm run build && electron ./build"
   },
   "build": {
     "appId": "com.yerkopalma.Todoapp",
@@ -38,7 +39,9 @@
   },
   "standard": {
     "parser": "@typescript-eslint/parser",
-    "plugins": [ "@typescript-eslint/eslint-plugin" ]
+    "plugins": [
+      "@typescript-eslint/eslint-plugin"
+    ]
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^1.10.2",
@@ -46,7 +49,8 @@
     "electron": "^5.0.4",
     "electron-builder": "^20.39.0",
     "electron-reload": "^1.4.0",
-    "standard": "^12.0.1"
+    "standard": "^12.0.1",
+    "typescript": "^3.5.2"
   },
   "dependencies": {
     "dragula": "^3.7.2",
