--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build": "tsc && npm run copy",
     "pack": "npm run build && electron-builder",
     "dist": "npm run build && electron-builder --macos --linux --windows",
-    "test": "standard *.ts && depcheck --skip-missing=true --ignores=@types/*,@typescript-eslint/*",
+    "test": "standard *.ts && depcheck --skip-missing=true --ignores=@types/*,@typescript-eslint/* && npm run test:integration",
+    "test:integration": "npm run build && ts-node ./test",
     "start": "npm run build && electron ./build/main",
     "copy": "cp src/renderer/*.css src/renderer/*.html build/renderer/"
   },
@@ -65,13 +66,17 @@
   },
   "devDependencies": {
     "@types/dragula": "^2.1.34",
+    "@types/tape": "^4.2.33",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
     "@typescript-eslint/parser": "^1.10.2",
     "depcheck": "^0.8.1",
     "electron": "^5.0.4",
     "electron-builder": "^20.39.0",
     "electron-reload": "^1.4.0",
+    "spectron": "^6.0.0",
     "standard": "^12.0.1",
+    "tape": "^4.10.2",
+    "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
   },
   "dependencies": {
