--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "standard *.ts && depcheck --skip-missing=true --ignores=@types/*,@typescript-eslint/* && npm run test:integration",
     "test:integration": "npm run build && ts-node ./test",
     "start": "npm run build && electron ./build/main",
-    "copy": "cp src/renderer/*.css src/renderer/*.html build/renderer/"
+    "copy": "cp src/renderer/*.css src/renderer/*.html build/renderer/ && mkdir -p build/renderer/styles && cp src/renderer/styles/*.css build/renderer/styles/"
   },
   "build": {
     "extends": null,
