--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
     "typescript": "^3.5.2"
   },
   "dependencies": {
+    "@types/auto-launch": "^5.0.1",
+    "auto-launch": "^5.0.5",
     "dragula": "^3.7.2",
     "electron-debug": "^3.0.0",
     "electron-store": "^3.3.0",
