--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,23 @@
-os: osx
-osx_image: xcode10.2
 language: node_js
+
+matrix:
+  include:
+    - os: linux
+    - os: osx
+      osx_image: xcode10.2
+
 node_js: '12'
+
+addons:
+  apt:
+    packages:
+      - xvfb
+
+before_script:
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export DISPLAY=:99.0; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sh -e /etc/init.d/xvfb start; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sleep 3; fi
+
 script:
-  - npm test
-  - npm run dist
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then npm test
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then npm run dist
