--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,5 @@ before_script:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sleep 3; fi
 
 script:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then npm test
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then npm run dist
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then npm test; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then npm run dist; fi
