--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,6 @@ addons:
     packages:
       - xvfb
 
-before_script:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export DISPLAY=:99.0; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sleep 3; fi
-
 script:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then npm test; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then xvfb-run test; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then npm run dist; fi
